correction mobile et mise en place diplôme
Images à ajouter

--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ form {
 	display: inline;
 }
 
+button {
+	outline: none;
+}
+
 button:hover {
 	cursor: pointer;
 }
@@ -73,6 +77,7 @@ header {
 }
 
 .navBarPC {
+	overflow: hidden;
 	position: fixed;
 	top: 0;
 }
@@ -85,6 +90,7 @@ header {
 }
 
 .navBarMobile {
+	overflow: hidden;
 	position: fixed;
 	bottom: 0;
 	width: 100vw;
@@ -101,6 +107,23 @@ header {
 
 a {
 	text-decoration: none;
+}
+
+img {
+	width: 200px;
+	height: 100px;
+}
+
+table {
+	border: 2px solid black;
+	border-radius: 25px;
+	background-color: lightgrey;
+	margin: 1%;
+	width: 98%;
+}
+
+td {
+	width: 48%;
 }
 
 @media screen and (max-width: 790px)
